# bigdataproject

./: pyproject.toml
bigdataproject/: clean_data.py  config.yaml  db_config.py  gold_layer.py  manage_db.py  test_connection.py  weighted_heatmap.html
bigdataproject/Miscellaneous Scripts and Queries/Row/: Column Count Aggregation.txt  Killed to Injured Field.json  Time of Day.json
