[project]
name = "bigdataproject"
version = "0.1.0"
description = ""
authors = [
    {name = "Jon",email = "witkow29@students.rowan.edu"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "pymongo (>=4.12.0,<5.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "pyjson (>=1.4.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
