[project]
name = "bigdataproject"
version = "0.1.0"
description = ""
authors = [
    {name = "Jon",email = "witkow29@students.rowan.edu"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "pymongo (>=4.12.0,<5.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "pyjson (>=1.4.1,<2.0.0)",
    "datetime (>=5.5,<6.0)",
    "pytime (>=0.2.3,<0.3.0)",
    "certifi (>=2025.4.26,<2026.0.0)",
    "multipledispatch (>=1.0.0,<2.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "folium (>=0.19.5,<0.20.0)",
    "pycollection (>=1.0.6,<2.0.0)",
    "plotly (>=6.0.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
